[gd_scene load_steps=2 format=3 uid="uid://exq7twacdetv"]

[ext_resource type="Script" path="res://addons/admob/src/core/components/Debug.gd" id="1"]

[node name="Debug" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1")

[node name="TabContainer" type="TabContainer" parent="."]
offset_right = 228.0
offset_bottom = 62.0

[node name="General" type="VBoxContainer" parent="TabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0

[node name="TestEuropeUserConsent" type="CheckBox" parent="TabContainer/General"]
offset_right = 228.0
offset_bottom = 31.0
text = "Test Europe User Consent"

[node name="Release" type="VBoxContainer" parent="TabContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0

[node name="DebugOnRelease" type="CheckBox" parent="TabContainer/Release"]
offset_right = 143.0
offset_bottom = 24.0
text = "Debug checked Release"

[node name="IsReal" type="CheckBox" parent="TabContainer/Release"]
offset_top = 28.0
offset_right = 143.0
offset_bottom = 52.0
disabled = true
text = "Is Real"

[node name="Advice" type="Label" parent="TabContainer/Release"]
offset_top = 56.0
offset_right = 143.0
offset_bottom = 546.0
text = "Advice: `Is Real` will ALWAYS be true unless `Debug checked Release` is true.

So if `Debug checked Release` is true it will consider the value of `Is Real` checked this page when the game is exported as \"Release\".

In other words, you don't need to change anything checked this page as it may cause bugs in your app once it's in the store.

Note: The `Test Europe User Consent` button even if it is true, when the application goes to production, that value will be false IF `Debug checked Release` is false."

[connection signal="pressed" from="TabContainer/General/TestEuropeUserConsent" to="." method="_on_TestEuropeUserConsent_pressed"]
[connection signal="pressed" from="TabContainer/Release/DebugOnRelease" to="." method="_on_DebugOnRelease_pressed"]
[connection signal="pressed" from="TabContainer/Release/IsReal" to="." method="_on_IsReal_pressed"]
